# FixelDB

./: .dockerignore  .gitignore  DESCRIPTION  Dockerfile  LoadDataInRDemo.Rmd  NAMESPACE  README.md  get_version.py  login.py  setup.cfg  tmp  wrapper.py
.circleci/: config.yml
R/: FixelArray.R  FixelArraySeed.R  analyse.R  checks.R  load_database.R  query_database.R
fixelarray/: fixels.py
fixeldb/: fixels.py
inst/python/fixeldb/: fixels.py  setup.py
inst/python/fixeldb/create_backend/: fixels.py
man/: FixelArray.Rd  FixelArray.lm.Rd  FixelArray.model.Rd
notebooks/: Demo.Rmd  Demo.nb.html  LoadDataInRDemo.Rmd  LoadDataInRDemo.nb.html  Using_FixelDB.Rmd  Using_FixelDB.nb.html  benchmarks_lm.Rmd  benchmarks_lm.nb.html  fba_josiane.Rmd  fba_josiane.nb.html
