[versioneer]
VCS = git
style = pep440
versionfile_source = fixeldb/_version.py
versionfile_build = fixeldb/_version.py
tag_prefix =
parentdir_prefix =


[metadata]
url = https://github.com/pennbbl/FixelDB
author = The PennBBL developers
author_email = Matthew.Cieslak@pennmedicine.upenn.edu
maintainer = Matt Cieslak, Tinashe M. Tapera
maintainer_email = Matthew.Cieslak@pennmedicine.upenn.edu
description = FixelDB (python) handles fixel input/output to mariadb from mrtrix
license = 3-clause BSD
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.5
install_requires =
    nibabel >=2.2.1
    numpy >=1.13.3
    pandas
    tqdm
    h5py
test_requires =
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.entry_points]
console_scripts =
    fixeldb_create=fixeldb.fixels:main


[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
